a1/brendan_gordon/TEST_PROGRAMS/invalidtype/brendan_gordon/1.min
var x: int;
var y: string;

x = x /y;



